bandit report added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.inclusions=**/*.java,**/*.py,**/*.js
 sonar.exclusions=**/node_modules/**,**/test/**,**/__pycache__/**
 
 # Java-specific
-sonar.java.binaries=target/
+#sonar.java.binaries=target/
 sonar.java.source=17
 
 # Python-specific
