--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@ sonar.projectKey=bihan-banerjee_AI-Code-Security
 sonar.organization=bihan-banerjee
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
+sonar.login=bbc9f159e9d61ee31d1f293c333dce31970a2a5f;
 
 # Detect all languages
 sonar.sources=.
