--- a/Secure Code-Webpage/tsconfig.json
+++ b/Secure Code-Webpage/tsconfig.json
@@ -7,6 +7,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
+    "noEmit": false,
     "lib": ["ES2022", "DOM"],
     "jsx": "react-jsx",
     "moduleResolution": "node",
