--- a/Secure Code-Webpage/package.json
+++ b/Secure Code-Webpage/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "preview": "vite preview",
+    "dev": "vite --mode development --host",
+    "build": "tsc && vite build --mode production",
+    "build:dev": "tsc && vite build --mode development",
+    "preview": "vite preview --host",
     "type-check": "tsc --noEmit",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix"
   },
