--- a/Secure Code-Webpage/package.json
+++ b/Secure Code-Webpage/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --mode development --host",
-    "build": "rm -rf dist && tsc --noEmit && vite build",
-    "build:dev": "tsc && vite build --mode development",
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
     "preview": "vite preview --host",
     "type-check": "tsc --noEmit",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix"
