--- a/Secure Code-Webpage/vercel.json
+++ b/Secure Code-Webpage/vercel.json
@@ -1,9 +1,24 @@
 {
-  "buildCommand": "npm run build -- --force",
+  "buildCommand": "npm run build",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        }
+      ]
     }
   ]
 }
