--- a/Secure Code-Webpage/package.json
+++ b/Secure Code-Webpage/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.87.4",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
